<resources>
    <string name="app_name">Vidyotan2</string>
    <string name="left_image" />
    <string name="college_name" >Sipna College of Engineering \n and Technology, Amravati</string>
    <string name="right_image" />
    <string name="background_image">Background Image</string>
    <string name="overlay_image">Overlay Image</string>
    <string name="_2024">2024</string>
    <string name="Slogan">A National level Techfest where Imagination meets Innovation</string>
    <string name="about_vidyotan">ABOUT VIDYOTAN</string>
    <string name="info">Vidyotan" is the annual Science and Technology based National level activity of Sipna College of Engineering and Technology, Amravati. The sole purpose of organizing this techfest  event is to give the students a platform to complete from all around to showcase their talent and skills in various integrated techno events. These events promote a real technical trade for the budding engineers to come up with their bright ideas.</string>
    <string name="info2">This year the Vidyotan theme is Chadryayan-3 Exploring The Universe.</string>
    <string name="info3">It Is organized on the 8th feb 2024</string>
    <string name="event">EVENTS IN VIDYOTAN</string>
    <string name="sc">Startup Conclave</string>
    <string name="btn1">Event Details</string>
    <string name="tc">Technical Quiz</string>
    <string name="csl">Civil Snake Ladder</string>
    <string name="bc">Box Cricket</string>
    <string name="cf">Circuit Fixer</string>
    <string name="dyts">Design yout T-Shirt</string>
    <string name="wa">Web/App Design</string>
    <string name="dth">Digital Treasure Hunt</string>
    <string name="ipl">IPL Auction</string>
    <string name="pc">Paper Castle</string>
    <string name="es">E-Sport</string>
    <string name="ss">Shutter Splash</string>
    <string name="robo">Robotics</string>
    <string name="mat">Make-A-Thon</string>
    <string name="sds">Screen D Structure</string>
    <string name="spazio">Spazio</string>
    <string name="yp">Yaksha Prashna</string>
    <string name="ps">Photo gallery</string>
    <string name="event_name_startup_conclave">Event Name: Startup Conclave</string>
    <string name="intro">Embark on a transformative journey at our Startup Conclave where diverse teams showcase unique ideas, pitch to judges and compete for prizes, fostering innovation and entrepreneurial excellence</string>
    <string name="date_and_time_8th_february_2024">Date and Time: 8th February 2024</string>
    <string name="location">Location : Sipna College of Engineering and Technology,Amravati</string>
    <string name="entry_fees">Entry Fees:\n • One/Two Partcipants: 200/- \n • Tree/Four Participants: 300/-</string>
    <string name="prize">Prizes:\n • Winner: ₹5000 \n •Runner Up: ₹3000</string>
    <string name="coordinator">Coordinators: \n1) Shreejit Umale: 9359583740\n2) Shruti Khandare: 9146342158\n3) Gauri Deshmukh : 8975531687\n4) Chanchal Rathi :8767227496</string>
    <string name="rules_amp_rugulations"><![CDATA[Rules & Rugulations]]></string>
    <string name="rules">1. A team must consist of a maximum of 4 and a minimum of 1 participant.\n2. Each team is allowed to present only one startup idea.\n 3. Team members can be from the same or different fields and colleges.\n 4. Internet facilities will not be provided during the event.\n 5. No mentors will be provided by the organizing committee.\n 6. Participants must report at 9 am on the event day.\n 7. Participants are required to bring their own laptop or pen drive containing their presentations or any necessary hard copies.\n 8. Pitching will be conducted individually in front of the judges.\n 9. Bring your college ID Cards and Receipt on event day.\n 10. All the participants will be awarded with  Participation Certificates .</string>
    <string name="note">Note: No abusive language, unfair mean will be tolerated, In such case the team will be disqualified.</string>
    <string name="register">Register</string>
    <string name="event_name_tecnical_quiz">Event Name: Tecnical Quiz</string>
    <string name="circuit_prize">Prizes:\n Group A:              Group B:\n Winner: &#8377;3000         Winner: &#8377;3000\n Runner Up: &#8377;2000        Runner Up: &#8377;2000</string>
    <string name="tecnical_quiz"><b>Round 1: Basic Engineering Technical GK\n </b>1) Number of questions - 50\n 2) Time to solve - 20 mins\n 3) Topics-Basic engineering, General science, etc\n 4) No negative marking.</string>
    <string name="tqr2"><b>Round 2: Image Identification\n </b>1) Number of questions - 20\n 2) Time to solve - 10 min\n 3) Topic - General </string>
    <string name="tqr3"><b>Round 3: Rapid Fire\n </b>1) Time allotted - 90 sec per each\n 2) Maximum question attempt</string>
    <string name="tqr4"> <b>Round 4: Quizzy Buzzers\n </b>1) Questions will be announced verbally\n 2) First come first serve.</string>
    <string name="tqrules">1. No electronic devices are allowed.\n 2. Only single entry will be considered.\n 3. In each round elimination will be based on cut off value.\n 4. In case of tie there will be an another round.\n 5. Regarding the round conduction, instructions will be shared at execution time.\n 6. Bring your college ID Cards and Receipt on event day\n 7. All the participants will be awarded with "Participation Certificates".</string>
    <string name="csrules"> 1. Bring your college ID Card and Receipt on event day.\n 2. Two members are allowed in each team.\n 3. All Rounds are knockout.\n 4. First Round - 5 to 6 teams will play and winner of them will go for second round.\n 5. Winning will be based on first reaching to finish point or the team which is not eliminated from the game\n 6. All the winner of 1st Round will play for 2nd Round and so on.\n 7. The information will be provided to you at the time of event.\n 8. Maximum entry restrictions - 40 teams (on first come first basis)\n9. All the participants will be awarded with "Participation Certificates".</string>
    <string name="bxcp"> • Number of participants per team: 7 Players and 1 Impact Player (optional) First 24 teams will be allowed for participation\n • Tournament will be of two days i.e. 7th &amp;; 8th Feb 2024\n • No re-entry and spot entry will be there\n • Team should include 5 Boys &amp; 2 Girls.</string>
    <string name="gr"><b>General Rules:\n </b>1) 7 players in one team &amp; 1 impact Player (optional)\n 2) First round 12 matches will be of 3 overs, Second round 6 matches will be of 3 overs and Third Round 3 matches will be of 4 overs\n 3) Semifinals 2 matches will be of 5 overs and Final will be of 6 overs\n 4) bowlers 1–1 over each and for next round only one bowler has 2 over and remaining 1–1 over\n 5) In Semifinals &amp; Finals, 2 bowlers has 2 overs and remaining 1–1 over\n 6) Some special rules will be conveyed at the time of Match\n 7) Bring your college ID Cards and Receipt on event day\n 8) All the participants will be awarded with "Participation Certificates "</string>
    <string name="battrules"><b>Batting Rules:\n </b>1) One Girl must open the inning with other batsman\n 2) Batsmen will be called out if he hits the ball over the boundaries (6 is out)\n 3) Each team should have their own bats (min 2). </string>
    <string name="ballrules"><b>Bowling Rules:\n  </b>1) Under arm bowling is compulsory\n 2) Ball should be pitched beyond the no ball line otherwise it will be called as no ball\n 3) Bowler has to ball within the given box without raising his leg. Any deviation from the above rules will be "NO BALL"\n 4) Usual NO BALL and WIDE BALL will be applicable\n5) Over throw runs will be counted.</string>
    <string name="rrinfo"><b>ROBO-RACE\n </b>ROBO- RACE Does racing run in your blood? Are you diehard fan of NFS most wanted, Formula 1 or any other racing game? If true, then we bring you the racing experience which will leave you thrilled.</string>
    <string name="rspeci"><b>Robot Specification:\n </b>1) The robot should be fit in the dimensions 25*25*25 cm (L*B*H)\n 2) Weight of robot should not exceed more than 3 kg.\n 3) Robot should be controlled by wired mechanism throughout the race (Wireless bots are not allowed).\n 4) Length of the wire must be sufficient to cover the arena\n 5) Wired robot will be provided by us or you can come with your robot with above specification</string>
    <string name="rrules"><b>Rules and Regulations:\n </b>1) A team can consist of min 1 and max 3 participants\n 2) Entry fees: 300/- per team\n 3) A team may consist of students from different colleges and each member should bring their college ID proof. POWER SUPPLY-Maximum allowed supply is 12 volt, 2 amp, will be provided by us. (External power supply is not allowed.) Maximum 3 hand touches is allowed\n4) Organizers may change the rules as per situation. Final decision will be taken by judges. Readymade toys cars and LEGO are not allowed.\n 5) If the participant causes any kind of physical damage to the opponent participants then, they will immediately disqualify. If the winner is not decided in the race then both the opponents will get disqualified.</string>
    <string name="rlj">ROBO Long Jump\n A trick is always to try collect the tries like trophies and you will never loose. You can\t always wait for the perfect time sometimes you must dare to jump.</string>
    <string name="rljr"><b>Rules and Regulations :\n </b>1) A team consist of min 1 and max 2 participants\n 2) Entry fees: 100/- per team\n3) A team may consist of students from different colleges and each member should bring their college ID proof\n 4) Robots will be provided by us. Two chances will be given\n 5) Organizers may change the rules as per situation per situation\n 6) Final decision will be taken by judges\n 7) Readymade toys cars and LEGO are not allowed</string>
    <string name="rljspeci"><b>Robot Specification :\n </b>1) The robot should be fit in the dimensions 25*25*25 cm (L*B*H)\n 2) Weight of robot should not exceed more than 3 kg.\n 3) Robot should be controlled by wired mechanism throughout the race (Wireless bots are not allowed).\n 4) Length of the wire must be sufficient to cover the arena\n 5) Wired robot will be provided by us or you can come with your robot with above specifications</string>
    <string name="rrspeci2"><b>Robot Specification :\n </b>1) Each robot should be manually controlled vehicle\n 2) The dimension of the robot should not exceed 33 cm (1)*25cm(b)*25 cm(h)\n 3) The robot should be remotely controlled and the connections (the wires, for instance) between the control unit and the robot should be slag at all times\n 4) Readymade toys and cars or LEGO are not allowed\n 5) Weight of the robot must not exceed 3kg (0.5 tolerance).</string>
    <string name="rrregu"><b>Rules and Regulations\n </b>1) Each team can consist of min 1 and max 3 participants\n 2) Entry fees: 300/- per team\n 3) There will be a maximum permitted time for different rounds ranging from 3 to 5 minutes. (1.5 min one half and 2 min maintenance break)\n 4) We will provide power point with 230 V 50 Hz on supply on extension cord and multipoint The potential difference between any two points must not exceed 12V at any point of the run\n 5) In final in case of a tie extra time of 1 min will be given which will be in two halfs of 0.5 min each round each match will be of 2 to 5 min in two halfs of 1 min each. Half time will be 2 min in which teams can repair their bots in case of any damage\n 6. The team will scores the first goal in the extra time, will be the winner.\n 7) If the winner is not decided after the extra time then event manager will decided how to separate the teams.</string>
</resources>