<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp"
    android:background="#001233">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp">

        <!-- First Image -->
        <ImageView
            android:id="@+id/firstImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/vidyotan_letters"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_marginBottom="8dp"/>

        <!-- Second Image -->
        <ImageView
            android:id="@+id/secondImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/startupc_conclave"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="8dp"/>

        <!-- Heading -->
        <TextView
            android:id="@+id/headingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_name_startup_conclave"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <!-- Information -->
        <TextView
            android:id="@+id/informationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_and_time_8th_february_2024"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/entryFees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_fees"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/prizes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prize"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coordinator"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <!-- Additional content goes here if needed -->
        <TextView
            android:id="@+id/headingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_amp_rugulations"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#1ea1f2"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <!-- Information -->
        <TextView
            android:id="@+id/informationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@string/rules'
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:padding="5sp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/custom_button"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</ScrollView>
