<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp"
    android:background="#001233">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp">

        <!-- First Image -->
        <ImageView
            android:id="@+id/firstImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/vidyotan_letters"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_marginBottom="8dp"/>

        <!-- Second Image -->
        <ImageView
            android:id="@+id/secondImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/technical_quiz"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="8dp"/>

        <!-- Heading -->
        <TextView
            android:id="@+id/headingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_name_tecnical_quiz"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>



        <TextView
            android:id="@+id/dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date and Time: 8th February 2024"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/entryFees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Entry Fees:100/- per participants"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/prizes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Prizes:\n &#8226; Winner: &#8377;3000 \n &#8226;Runner Up: &#8377;2000"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Coordinators: \n1) Sanket Thakare : 9119495966\n2) Aatif Khan : 9764433143\n3) Maithili Pande : 9665178804\n4) Nisha Pande : 9175238572"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnical_quiz"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tqr2"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tqr3"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tqr4"
            android:textSize="21sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <!-- Additional content goes here if needed -->
        <TextView
            android:id="@+id/headingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rules &amp; Rugulations"
            android:textSize="24sp"
            android:textColor="#1ea1f2"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <!-- Information -->
        <TextView
            android:id="@+id/informationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@string/tqrules'
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>



        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:padding="5sp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</ScrollView>
